Troubleshooting blocking scroll #9 - trying overflow:hidden to stop scroll

--- a/styles/sass/partials/_global.scss
+++ b/styles/sass/partials/_global.scss
@@ -139,7 +139,8 @@ canvas {
 }
 
 .stopScroll {
-    position: fixed;
+    // position: fixed;
+    overflow: hidden;
 }
 
 
