--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -2,7 +2,7 @@ header {
     height: 20vh;
     padding: 20px 0;
     position: relative;
-    z-index: 20;
+    z-index: 40;
     // background-color: $primary;
     // background-image: linear-gradient(to bottom, rgba(255,0,0,0), $secondary);
     background-image: linear-gradient(to bottom, $primary, rgba(255,255,255,0));
